--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Hero Section -->
 
-    <script type="module"
+<!--     <script type="module"
       src="https://agent.d-id.com/v2/index.js"
       data-mode="fabio"
       data-client-key="Z29vZ2xlLW9hdXRoMnwxMDYyOTU5NzE3NTg4OTgxNDU2NjQ6OUNoNnR1clRWOUpVTlBjYWJPM3VI"
@@ -59,7 +59,7 @@
       data-orientation="horizontal"
       data-position="right">
 </script>
-    <section id="home" class="hero">
+    <section id="home" class="hero"> -->
         <div class="container">
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6 animate__animated animate__fadeInLeft">
