--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <script type="module"
+      src="https://agent.d-id.com/v2/index.js"
+      data-mode="fabio"
+      data-client-key="Z29vZ2xlLW9hdXRoMnwxMDEyMzc0MjA1ODI2OTE5NDc5MDM6MlFPcFJFU3dWOHROMEFrWnRpaUQz"
+      data-agent-id="v2_agt_utifhb1M"
+      data-name="did-agent"
+      data-monitor="true"
+      data-orientation="horizontal"
+      data-position="right">
+</script>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
