--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <script type="module"
+<!--     <script type="module"
       src="https://agent.d-id.com/v2/index.js"
       data-mode="fabio"
       data-client-key="Z29vZ2xlLW9hdXRoMnwxMDEyMzc0MjA1ODI2OTE5NDc5MDM6MlFPcFJFU3dWOHROMEFrWnRpaUQz"
@@ -24,7 +24,7 @@
       data-monitor="true"
       data-orientation="horizontal"
       data-position="right">
-</script>
+</script> -->
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
