--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
 </head>
 <body>
 
-<!--     <script type="module"
+<script type="module"
       src="https://agent.d-id.com/v2/index.js"
       data-mode="fabio"
-      data-client-key="Z29vZ2xlLW9hdXRoMnwxMDEyMzc0MjA1ODI2OTE5NDc5MDM6MlFPcFJFU3dWOHROMEFrWnRpaUQz"
-      data-agent-id="v2_agt_utifhb1M"
+      data-client-key="Z29vZ2xlLW9hdXRoMnwxMTQ5OTM5OTUyNTIyOTg5NzQ0NDc6WDZweEJseVlnek1ZZ3NjZm9hTXNq"
+      data-agent-id="v2_agt_BNG8x07L"
       data-name="did-agent"
       data-monitor="true"
       data-orientation="horizontal"
       data-position="right">
-</script> -->
-    <!-- Navigation -->
+</script>
+
+
+
+
+
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Shivaprasad Boya</a>
